--- a/src/app.postcss
+++ b/src/app.postcss
@@ -78,33 +78,7 @@
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     line-height: 1.75;
+    scrollbar-gutter: stable both-edges;
     @apply bg-background text-foreground;
-  }
-  body {
-    background: white;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    line-height: 1.75;
-    color: #000000;
-  }
-
-  h1 {
-    font-size: 3.052rem;
-  }
-
-  h2 {
-    font-size: 2.441rem;
-  }
-
-  h3 {
-    font-size: 1.953rem;
-  }
-
-  h4 {
-    font-size: 1.563rem;
-  }
-
-  h5 {
-    font-size: 1.25rem;
   }
 }
